# epsteinlib

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitlab-ci.yml  .pylintrc  CHANGELOG.md  CNAME  Doxyfile  Mathematica  Python  README.md  crandall_8c.html  crandall_8c__incl.md5  crandall_8h.html  crandall_8h__dep__incl.md5  crandall_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_7837fde3ab9c1fb2fc5be7b717af8d79.html  doxygen_crawl.html  epsteinZeta_8c.html  epsteinZeta_8c__incl.map  epsteinZeta_8c__incl.md5  epsteinZeta_8h_source.html  files.html  flake.lock.license  flake.nix  gamma_8c.html  gamma_8c__incl.map  gamma_8h.html  gamma_8h__dep__incl.md5  gamma_8h_source.html  globals.html  globals_defs.html  globals_enum.html  globals_func.html  graph_legend.html  index.html  index.xml  lattice__sum_8c.html  (+19 more)
.github/workflows/: deploy-website.yml  main.yml  pre-commit.yml  python.yml
C/: .clang-format  .gitignore  .gitlab-ci.yml  CHANGELOG.md  Doxyfile  README.md  flake.nix  init.sh  meson.build  pyproject.toml
C/benchmark/: benchmark_epstein.c  benchmark_gamma.c  meson.build
C/benchmark/csv/: epsteinZetaReg_s32.csv  epsteinZetaReg_s8.csv  epsteinZeta_s32.csv  epsteinZeta_s33.csv
C/html/: crandall_8c.html  crandall_8c__incl.map  crandall_8c__incl.md5  crandall_8h.html  crandall_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_7837fde3ab9c1fb2fc5be7b717af8d79.html  epsteinZeta_8c.html  epsteinZeta_8c__incl.map  files.html  gamma_8c.html  gamma_8h.html  gamma_8h_source.html  globals.html  globals_defs.html  globals_enum.html  globals_func.html  graph_legend.html  index.html  menudata.js  namespace__epsteinlib.html  namespacemembers.html  namespacemembers_func.html  namespaces.html  tools_8c.html  tools_8h.html  tools_8h_source.html  zeta_8c.html  zeta_8h.html  zeta_8h_source.html
C/mathematica/: meson.build  zeta_mathematica.c  zeta_mathematica.h
C/nix/: devshells.nix
C/python/: epsteinlib.pyx
C/python/tests/: meson.build
C/src/: crandall.c  gamma.c  meson.build  tools.c  tools.h  zeta.c
C/src/tests/: test_crandall.c  test_crandall.wls  test_epsteinZeta.c  test_epsteinZeta.wls  utils.c
C/src/tests/csv/: crandall_g_Ref.csv  crandall_g_Ref.csv.license  epsteinZetaReg_Ref.csv  epsteinZeta_Ref.csv
Doc/: CHANGELOG.md  Documentation.html  LICENSES  README.md
Mathematica/: Examples  ReplicateResults.wls  Wrapper
Python/: Examples  Wrapper
benchmark/: benchmark_epstein.c  benchmark_gamma.c
benchmark/csv/: epsteinZeta_s22.csv
categories/: index.html  index.xml
example/: meson.build
examples/c/: lattice_sum.c
examples/mathematica/: BenchmarkAndPaperFigures.wls  BenchmarkQuick.wls  Figures.wls  GBesselBenchmark.wls  LatticeSum.wls  SingularEulerMcLaurinExpansion1D.wls  SingularEulerMcLaurinExpansion2D.wls  TaylorSeries.wls
examples/python/: dispersion_relation_3d.py  epstein_zeta_derivative.py  lattice_sum.py  sem_gaussian_1d.py
html/0.1.0/: crandall_8c.html  crandall_8c__incl.map  crandall_8c__incl.md5  crandall_8h.html  crandall_8h_source.html  dir_000000_000001.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  doxygen_crawl.html  epsteinZeta_8c.html  epsteinZeta_8h.html  epsteinZeta_8h__dep__incl.map  epsteinZeta_8h__incl.map  epsteinZeta_8h__incl.md5  epsteinZeta_8h_source.html  files.html  gamma_8c.html  gamma_8c__incl.map  gamma_8c__incl.md5  gamma_8h.html  gamma_8h__dep__incl.map  gamma_8h__dep__incl.md5  gamma_8h_source.html  globals.html  globals_defs.html  globals_enum.html  globals_func.html  graph_legend.html  index.html  lattice__sum_8c.html  lattice__sum_8c__incl.map  menudata.js  tools_8c.html  tools_8c__incl.map  tools_8h.html  tools_8h__dep__incl.md5  tools_8h__incl.map  tools_8h__incl.md5  tools_8h_source.html  zeta_8c.html  (+5 more)
html/0.2.0/: crandall_8c.html  (+32 more)
include/: epsteinZeta.h  meson.build
mathematica/: EpsteinZeta.wl  LatticeSum.wls  zeta_mathematica.c  zeta_mathematica.h
nix/: devshells.nix  packages.nix
python/: _epsteinlib.py  epsteinlib.pxd  epsteinlib.pyi  lattice_sum.py  meson.build  remove_symlink.sh  requirements.txt
python/tests/: benchmark_functions.py  test_epsteinlib.py
search/: all_1.js  all_10.js  all_2.js  all_4.js  all_5.js  all_7.js  all_8.js  all_d.js  all_e.js  files_2.js  files_3.js  files_4.js  functions_2.js  functions_3.js  functions_5.js  searchdata.js
src/: crandall.c  crandall.h  epsteinZeta.c  gamma.c  gamma.h  meson.build  tools.c  tools.h  zeta.c  zeta.h
src/tests/: benchmark_epstein.c  benchmark_gamma.c  benchmark_setZetaDer.c  meson.build  test_crandall.c  test_crandall.wls  test_crandall_der.c  test_crandall_der.wls  test_epsteinZeta.c  test_epsteinZeta.wls  test_epsteinZetaRegDer.c  test_epsteinZetaRegDer.wls  test_setZetaDer.c  test_setZetaDer.wls  utils.c  utils.h
src/tests/csv/: crandall_gReg_der_Ref.csv  crandall_gReg_der_d2k_prototype_Ref.csv  crandall_gReg_nuequalsminus2k_der_prototype_Ref.csv  crandall_g_Ref.csv.license  crandall_g_der_Ref.csv  epsteinZetaRegDer_d2k_prototype_Ref.csv  epsteinZetaRegDer_prototype_Ref.csv  epsteinZetaReg_Ref.csv  epsteinZetaReg_s1.csv  epsteinZetaReg_s21.csv  epsteinZetaReg_s22.csv  epsteinZetaReg_s31.csv  epsteinZetaReg_s32.csv  epsteinZetaReg_s33.csv  epsteinZetaReg_s4.csv  epsteinZetaReg_s6.csv  epsteinZetaReg_s8.csv  epsteinZeta_Ref.csv  epsteinZeta_s1.csv  epsteinZeta_s21.csv  epsteinZeta_s22.csv  epsteinZeta_s31.csv  epsteinZeta_s32.csv  epsteinZeta_s33.csv  epsteinZeta_s4.csv  epsteinZeta_s6.csv  epsteinZeta_s8.csv  gamma_big.csv  gamma_small.csv  log_l_der_Ref.csv  polynomial_l_Ref.csv  polynomial_p_Ref.csv  polynomial_y_der_Ref.csv  setZetaDer1D_Ref.csv  setZetaDer_1D_Ref.csv  setZetaDer_Ref.csv  setZetaDer_directional_Ref.csv  setZetaDer_laplace2_Ref.csv  setZetaDer_laplace_Ref.csv  setZetaDer_odd_Ref.csv  (+5 more)
tags/: index.html  index.xml
test/: epsteinZeta.h  lattice_sum.c  meson.build
userManual/: literature.bib  main.tex  userManual.tex
website/: .gitignore  CONTRIBUTING.md  LICENSE  README.md  go.mod  go.sum  hugo.yaml  hugo.yaml.license
(+290 files in other folders)
