option('python_only', type : 'boolean', value : false, description : 'Do not install anything else other than the Python extension. This needs to be set to true for pip install to work on Windows.')
option('C_only', type : 'boolean', value : false, description : 'Do only build and install the C library.')
